# bioreactor

./: .gitignore  .gitmodules  README.md
backend/: .gitignore  Cargo.toml
backend/model/: Cargo.toml  Makefile
backend/model/examples/: 01_bioreactor_model.rs  01_messaging.rs  02_bioreactor_model.rs
backend/model/src/model/: bioreactor.rs  mod.rs  stirrer.rs  thermal.rs
circuits/component_libraries/ads1x1x/: 1085.kicad_sym  MODULE_1085.kicad_mod
circuits/component_libraries/sysmo/: SysMo.kicad_sym
circuits/controller_v1.0/: esp_wroom32_devkit1.ods
circuits/controller_v1.0/controller_v1.0/: controller_v1.0.kicad_prl  controller_v1.0.kicad_pro  controller_v1.0.kicad_sch  sym-lib-table
doc/: ControllerSketch_00.excalidraw  ControllerSketch_01.excalidraw  MqttChannels.excalidraw  OrangePi.md  Planning.md
frontend/bench_communication/: analysis_options.yaml  pubspec.yaml
frontend/bench_communication/example/: bench_communication_example.dart
frontend/bench_communication/lib/: channels.dart
frontend/bench_communication/test/: bench_communication_test.dart
frontend/bench_core/: Makefile  analysis_options.yaml  pubspec.yaml
frontend/bench_core/lib/: channels.dart  influxdb.dart  log.dart  messages.dart  mqtt.dart  quantity.dart
frontend/bench_core/test/: bench_core_test.dart
frontend/bench_dashboard/: pubspec.yaml
frontend/bench_dashboard/android/: local.properties
frontend/bench_dashboard/lib/: basic.dart  (+2 more)
frontend/bench_simulator/: analysis_options.yaml  pubspec.yaml
frontend/bioreact/: README.md  analysis_options.yaml  pubspec.yaml
(+86 files in other folders)
