[package]
name = "bioreactor_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flowmbed_peripherals = {path = "../../../../SysMo/flowmbed/peripherals/"}
log = "0.4"

[dev-dependencies]
simple_logger = "4.0"

[features]
desktop = ["flowmbed_peripherals/desktop"]
embedded = []